vlib/v/checker/tests/operator_overloading_primitive_alias_return_type_err.vv
type Byte = u8
type ByteString = string

fn (a Byte) + (b Byte) ByteString {
	return ByteString('x')
}

fn (a Byte) - (b Byte) string {
	return 'y'
}
